# mcp-gatekeeper

./: .dockerignore  Dockerfile  LICENSE  README.md  fastmcp.json  pyproject.toml
src/mcp_gatekeeper/: __init__.py  __main__.py  tools.py  vault_client.py
src/openbao_mcp/: __init__.py  __main__.py  tools.py  vault_client.py
