[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gatekeeper"
version = "0.1.0"
description = "MCP Gatekeeper - Zero-standing-access token broker for Claude Code"
requires-python = ">=3.13,<3.14"
license = {text = "Apache-2.0"}

dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.27.0,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
