[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbao-mcp"
version = "0.1.0"
description = "OpenBao MCP Server - RO/RW token broker for Claude Code"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.27.0,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
